--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body{
     }
 
     .col__image img{
-        margin-left: -5%;
+        margin-left: 0;
         width: 540px;
         height: 440px;
     }
