--- a/views/index.ejs
+++ b/views/index.ejs
@@ -154,7 +154,8 @@
             <!-- End Cards-->
 
             <!-- Modal -->
-            <form action="" method="delete">
+            <% cars.map((car) => { %>
+            <form action="http://localhost:2000/delete-car/<%= car.id %>" method="delete">
                 <div class="modal fade" id="exampleDeletedCar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -173,6 +174,7 @@
                     </div>
                 </div>
             </form>
+            <% }) %>
             <!-- End Modal -->
 
         </div>
