--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -205,7 +205,7 @@ body {
     cursor: pointer;
 }
 
-.display-all-cars button.btn{
+.display-all-cars a.delete{
     color: #FA2C5A;
     font-size: 14px;
     height: 40px;
@@ -216,6 +216,10 @@ body {
     border: 2px solid #FA2C5A;
     text-align: center;
     cursor: pointer;
+}
+
+.display-all-cars a.delete:hover{
+    color: #FA2C5A;
 }
 
 .icon_button{
