--- a/views/index.ejs
+++ b/views/index.ejs
@@ -188,20 +188,10 @@
     <!-- Bootstrap JS -->
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-    <!-- Custom JS
-    <script src="/assets/js/sidebar.js"></script>  -->
+    <!-- Custom JS -->
+    <!-- <script src="/assets/js/sidebar.js"></script> -->
 
-    <script>
-        const deleteButton = document.getElementsByClassName("deleteButton");
-        const form = document.getElementById("formDelete");
-        console.log(deleteButton);
-        Array.from(deleteButton).forEach(btn => {
-            btn.addEventListener("click", function(){
-                console.log(btn.value);
-                form.action = form.action + btn.value;
-                console.log(form.action);
-            })
-        })
-    </script>
+    <script src="./assets/js/deleteButton.js"></script>
+
 </body>
 </html>
